force-app/src/objects/c2g__codaInvoiceLineItem__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpinvoice</customHelpPage>
    <description>The line items on the invoice, such as product, unit price, quantity and line total.</description>
    <fields>
        <fullName>c2g__CalculateIncomeSchedule__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checkbox, checked by default, changed to unchecked if has been used</description>
        <label>Calculate Income Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CalculateTaxValue1FromRate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Calculate Tax Value from Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CalculateTaxValue2FromRate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Calculate Tax Value 2 from Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CalculateTaxValue3FromRate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Calculate Tax Value 3 from Rate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveLineNumber__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Line Number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveTaxRate1FromCode__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Tax Rate from Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveTaxRate2FromCode__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Tax Rate 2 from Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveTaxRate3FromCode__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Tax Rate 3 from Code</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveUnitPriceFromProduct__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Unit Price from Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Destination Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Sales Invoice Line Items (Destination Company)</relationshipLabel>
        <relationshipName>SalesInvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationNetValue__c</fullName>
        <formula>c2g__DestinationUnitPrice__c * c2g__DestinationQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationQuantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The quantity of product bought by destination company.</description>
        <label>Destination Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DestinationUnitPrice__c</fullName>
        <description>The unit price for this product for destination company.</description>
        <label>Destination Unit Price</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension1__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Sales Invoice Line Items</relationshipLabel>
        <relationshipName>InvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension2__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Sales Invoice Line Items</relationshipLabel>
        <relationshipName>InvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension3__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Sales Invoice Line Items</relationshipLabel>
        <relationshipName>InvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ExcludeFromWithholding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that the product line item is excluded from the Withholding Tax calculation.</description>
        <label>Exclude from Withholding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Product GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Sales Invoice Line Items</relationshipLabel>
        <relationshipName>SalesInvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IncomeScheduleGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>c2g__codaGroupingReference__c</referenceTo>
        <relationshipLabel>Sales Invoice Line Items</relationshipLabel>
        <relationshipName>SalesInvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IncomeSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Income Schedule</label>
        <referenceTo>c2g__codaIncomeScheduleDefinition__c</referenceTo>
        <relationshipLabel>Sales Invoice Line Items</relationshipLabel>
        <relationshipName>SalesInvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>c2g__codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Sales Invoice Note Line Items</relationshipLabel>
        <relationshipName>SalesInvoiceNoteLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InternalCalculateIS__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Internal Calculate IS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceCurrencyDecimalPlaces__c</fullName>
        <defaultValue>2</defaultValue>
        <description>The number of decimal places used by the invoice currency. Permitted values are 0 and 2. The default is 2.</description>
        <label>Currency Decimal Places</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Invoice__c</fullName>
        <description>The auto-generated invoice number.</description>
        <label>Invoice Number</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Sales Invoice Line Items</relationshipLabel>
        <relationshipName>InvoiceLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__LineDescription__c</fullName>
        <label>Line Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__LocalGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Product Local GLA</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a local GLA and must be active.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Sales Invoice Line Items (Override Product Local GLA)</relationshipLabel>
        <relationshipName>SalesInvLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__NetValue__c</fullName>
        <description>The unit price multiplied by the quantity.</description>
        <formula>Round((c2g__UnitPrice__c * c2g__Quantity__c), IF(ISBLANK(c2g__InvoiceCurrencyDecimalPlaces__c), 2, c2g__InvoiceCurrencyDecimalPlaces__c))</formula>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__NumberofJournals__c</fullName>
        <label>Number of Journals</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OriginalInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the original invoice that this line came from before consolidation.</description>
        <label>Original Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Superseded Sales Invoice Line Items</relationshipLabel>
        <relationshipName>SupersededSalesInvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Sales Invoice Line Items (Company)</relationshipLabel>
        <relationshipName>InvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PeriodInterval__c</fullName>
        <label>Period Interval</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ProductCode__c</fullName>
        <description>Product Code.</description>
        <formula>c2g__Product__r.ProductCode</formula>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ProductReference__c</fullName>
        <formula>c2g__Product__r.Name</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product name.</description>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales Invoice Line Items</relationshipLabel>
        <relationshipName>InvoiceLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The quantity of product sold.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ScheduleNetTotal__c</fullName>
        <description>Sum of the Amount on the Income Schedule Lines</description>
        <label>Schedule Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Income Schedule</description>
        <label>Deprecated: Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__SetTaxCode1ToDefault__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Set Tax Code 1 to Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__SetTaxCode2ToDefault__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Set Tax Code 2 to Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__SetTaxCode3ToDefault__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Set Tax Code 3 to Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ShipFrom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The address of the company site from which the item is shipped. This field is used to calculate tax on the sales invoice line item when the Calculate Tax using Line Level Address custom setting is enabled.</description>
        <inlineHelpText>The address of the company site from which the item is shipped. This field is used to calculate tax on the sales invoice line item when the Calculate Tax using Line Level Address custom setting is enabled.</inlineHelpText>
        <label>Ship From</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The address on the selected company site is not validated.</errorMessage>
            <filterItems>
                <field>fferpcore__CompanySite__c.fferpcore__IsAddressValidated__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>fferpcore__CompanySite__c</referenceTo>
        <relationshipLabel>Sales Invoice Line Items (Ship From)</relationshipLabel>
        <relationshipName>SalesInvoiceLineItemsShipFrom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ShipTo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The address of the contact to which the item is shipped. This field is used to calculate tax on the sales invoice line item when the Calculate Tax Using Line Level Address custom setting is enabled.</description>
        <inlineHelpText>The address of the contact to which the item is shipped. This field is used to calculate tax on the sales invoice line item when the Calculate Tax Using Line Level Address custom setting is enabled.</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sales Invoice Line Items (Ship To)</relationshipLabel>
        <relationshipName>SalesInvoiceLineItemsShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Invoice Line Items (Tax Code)</relationshipLabel>
        <relationshipName>InvoiceLineItemsTC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 2</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Invoice Line Items (Tax Code 2)</relationshipLabel>
        <relationshipName>InvoiceLineItemsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 3</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Invoice Line Items (Tax Code 3)</relationshipLabel>
        <relationshipName>InvoiceLineItemsTC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCodeCombined__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Combined Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Invoice Line Items (Combined Tax Code)</relationshipLabel>
        <relationshipName>InvoiceLineItemsTCCombined</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxRate1__c</fullName>
        <label>Tax Rate</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxRate2__c</fullName>
        <label>Tax Rate 2</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxRate3__c</fullName>
        <label>Tax Rate 3</label>
        <precision>7</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxRateTotal__c</fullName>
        <formula>c2g__TaxRate1__c + c2g__TaxRate2__c + c2g__TaxRate3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Rate Total</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxValue1__c</fullName>
        <label>Tax Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxValue2__c</fullName>
        <label>Tax Value 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxValue3__c</fullName>
        <label>Tax Value 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TaxValueTotal__c</fullName>
        <formula>c2g__TaxValue1__c + c2g__TaxValue2__c + c2g__TaxValue3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax Value Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UnitPrice__c</fullName>
        <description>The unit price for this product.</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UsePartPeriods__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Part Periods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__UseProductInformation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checkbox, checked by default, changed to unchecked if has been used</description>
        <label>Use Product Information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffstools__NewDimension1Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NewDimension1Id</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Sales Invoice Line Items (NewDimension1Id)</relationshipLabel>
        <relationshipName>Sales_Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffstools__NewDimension2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NewDimension2Id</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Sales Invoice Line Items (NewDimension2Id)</relationshipLabel>
        <relationshipName>Sales_Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffstools__NewDimension3Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NewDimension3Id</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Sales Invoice Line Items (NewDimension3Id)</relationshipLabel>
        <relationshipName>Sales_Invoice_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffstools__ToUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ToUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffstools__Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated</label>
        <type>Checkbox</type>
    </fields>
    <label>Sales Invoice Line Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Sales Invoice Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Invoice Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>c2g__ContactRule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK( c2g__ShipTo__c ))  &amp;&amp; c2g__Invoice__r.c2g__Account__c  &lt;&gt;  c2g__ShipTo__r.AccountId</errorConditionFormula>
        <errorDisplayField>c2g__ShipTo__c</errorDisplayField>
        <errorMessage>The account on the contact record must match that on the related sales invoice.</errorMessage>
    </validationRules>
</CustomObject>